Updating markdown cell

--- a/problem-1.ipynb
+++ b/problem-1.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can improve the current solution by using a divide and conquer approach, repeatedly merging pairs of arrays until we're left with a single sorted array. This would have a time complexity of **O(NK log K)** compared to solution implemented **O(NK<sup>2</sup>)**."
+    "You can improve the current solution by using a divide and conquer approach, repeatedly merging pairs of arrays until we're left with a single sorted array. This would have a better time complexity compared to solution implemented."
    ]
   }
  ],
